--- a/freeplane_framework/windows-portable/App/AppInfo/appinfo.ini
+++ b/freeplane_framework/windows-portable/App/AppInfo/appinfo.ini
@@ -20,8 +20,8 @@ CommercialUse=true
 EULAVersion=1
 
 [Version]
-PackageVersion=1.0.41.1
-DisplayVersion=1.0.41 beta
+PackageVersion=1.0.42.1
+DisplayVersion=1.0.42 rc
 
 [SpecialPaths]
 Plugins=NONE
