--- a/.bzrignore
+++ b/.bzrignore
@@ -5,9 +5,14 @@ backups
 .DS_Store
 .backup
 ./.metadata
+./freeplane/lib/jortho.jar
 ./freeplane_framework/windows-launcher/Freeplane_private.h
 ./freeplane_framework/windows-launcher/Freeplane_private.rc
 ./freeplane_framework/windows-launcher/Freeplane_private.res
 ./freeplane_framework/windows-launcher/Freeplane.o
 ./freeplane_framework/windows-launcher/Makefile.win
 ./freeplane_framework/build4mac
+./freeplane_framework/ant/lib/freeplaneant.jar
+./freeplane_ant/test/log
+./freeplane_ant/test/sorted
+./freeplane_ant/test/freeplane_plugin_*
