--- a/freeplane_framework/ant/build.xml
+++ b/freeplane_framework/ant/build.xml
@@ -2,7 +2,7 @@
 	<property name="workspace" location=".." />
 	<property file="${workspace}/freeplane/viewer-resources/version.properties" />
 	<property file="ant/ant.properties" />
-	<property name="freeplaneant.jar" value="ant/lib/freeplaneant.jar" />
+	<property name="freeplaneant.jar" value="${workspace}/freeplane_framework/ant/lib/freeplaneant.jar" />
 	<property name="root" value="." />
 	<property name="build" value="${root}/build" />
 	<property name="build4mac" value="${root}/build4mac" />
@@ -13,7 +13,13 @@
 		<isset property="minor" />
 	</condition>
 
-    <!-- Mac OS X -->
+	<property name="license" value="license.txt" />
+	<property name="readme_src" value="readme.txt" />
+    <property name="build.resources" value="${build}/resources" />
+    <property name="build.doc" value="${build}/doc" />
+	<property name="script" value="${root}/script" />
+
+	<!-- Mac OS X -->
 	<condition property="isMacOs">
 	      <os family="mac"/>
 	</condition>
@@ -35,14 +41,9 @@
 		</copy>
 	</target>
 	
-	<target name="build">
+
+	<target name="build_core">
 		<echo>Freeplane Version = ${ver}.</echo>
-		<property name="root" value="." />
-		<property name="license" value="license.txt" />
-		<property name="readme_src" value="readme.txt" />
-        <property name="build.resources" value="${build}/resources" />
-        <property name="build.doc" value="${build}/doc" />
-		<property name="script" value="${root}/script" />
 
 		<mkdir dir="${build}" />
 		<copy todir="${build}">
@@ -58,42 +59,54 @@
 			<param name="plugindir" value="freeplane"/>
 			<param name="pluginname" value="org.freeplane.core"/>
 	    </antcall>
-
-		<!-- temporarily remove help plugin 
+	</target>
+	
+	<target name="build_help" unless="skip_help">
 		<antcall target="makePlugin" inheritall="false">
 			<param name="anttarget" value="dist"/>
 			<param name="targetdir" value="plugins"/>
 			<param name="plugindir" value="freeplane_plugin_help"/>
 			<param name="pluginname" value="org.freeplane.plugin.help"/>
 	    </antcall>
-		-->
+	</target>
+	
+	<target name="build_latex" unless="skip_latex">
 		<antcall target="makePlugin" inheritall="false">
 			<param name="anttarget" value="dist"/>
 			<param name="targetdir" value="plugins"/>
 			<param name="plugindir" value="freeplane_plugin_latex"/>
 			<param name="pluginname" value="org.freeplane.plugin.latex"/>
 	    </antcall>
-
+	</target>
+	
+	<target name="build_svg" unless="skip_svg">
 		<antcall target="makePlugin" inheritall="false">
 			<param name="anttarget" value="dist"/>
 			<param name="targetdir" value="plugins"/>
 			<param name="plugindir" value="freeplane_plugin_svg"/>
 			<param name="pluginname" value="org.freeplane.plugin.svg"/>
 	    </antcall>
-
+	</target>
+	
+	<target name="build_script" unless="skip_script">
 		<antcall target="makePlugin" inheritall="false">
 			<param name="anttarget" value="dist"/>
 			<param name="targetdir" value="plugins"/>
 			<param name="plugindir" value="freeplane_plugin_script"/>
 			<param name="pluginname" value="org.freeplane.plugin.script"/>
 	    </antcall>
-
+	</target>
+	
+	<target name="build_bugreport" unless="skip_bugreport">
 		<antcall target="makePlugin" inheritall="false">
 			<param name="anttarget" value="dist"/>
 			<param name="targetdir" value="plugins"/>
 			<param name="plugindir" value="freeplane_plugin_bugreport"/>
 			<param name="pluginname" value="org.freeplane.plugin.bugreport"/>
 	    </antcall>
+	</target>
+	
+	<target name="build" depends="build_core, build_latex, build_svg, build_script, build_bugreport">
 
        <mkdir dir="${build.resources}" />
         <copy todir="${build.resources}">
@@ -347,16 +360,16 @@
 		</exec>
 	</target>
 	
-	<target name="dist" depends="clean, bzr_version_info, binzip, srczip, installer, portableinstaller, zip4mac">
+	<target name="dist" depends="clean, bzr_version_info, binzip, srczip, installer, portableinstaller, zip4mac, dmg4mac">
         <copy file="${workspace}/freeplane/doc/history_en.txt" todir="${dist}" />
         <copy file="${build}/bzrinfo.txt" tofile="${dist}/bzrinfo${branch-nick}-${ver}.txt" failonerror="false"/>
 	</target>
 
 	<target name="check-translation">
-		<ant antfile="ant/build.xml" target="check-translation" dir="${workspace}/freeplane" inheritall="no"/>
+		<ant antfile="ant/build.xml" target="check-translation" dir="${workspace}/freeplane" />
 	</target>
 	<target name="format-translation">
-		<ant antfile="ant/build.xml" target="format-translation" dir="${workspace}/freeplane" inheritall="no"/>
+		<ant antfile="ant/build.xml" target="format-translation" dir="${workspace}/freeplane" />
 	</target>
 	<target name="format-translation-force">
 		<ant antfile="ant/build.xml" target="format-translation-force" dir="${workspace}/freeplane" />
