--- a/freeplane_framework/windows-portable/App/AppInfo/appinfo.ini
+++ b/freeplane_framework/windows-portable/App/AppInfo/appinfo.ini
@@ -20,8 +20,8 @@ CommercialUse=true
 EULAVersion=1
 
 [Version]
-PackageVersion=1.0.45.1
-DisplayVersion=1.0.45 rc
+PackageVersion=1.1.0.1
+DisplayVersion=1.1.0
 
 [SpecialPaths]
 Plugins=NONE
