--- a/freeplane_framework/ant/build.xml
+++ b/freeplane_framework/ant/build.xml
@@ -2,6 +2,7 @@
 	<property name="workspace" location=".." />
 	<property file="${workspace}/freeplane/viewer-resources/version.properties" />
 	<property file="ant/ant.properties" />
+	<property name="freeplaneant.jar" value="ant/lib/freeplaneant.jar" />
 	<property name="root" value="." />
 	<property name="build" value="${root}/build" />
 	<property name="build4mac" value="${root}/build4mac" />
@@ -20,8 +21,11 @@
     <property name="mac-jarbundler" value = "${root}/mac-jarbundler"/>
 	<property name="jarbundler.jar" value = "jarbundler-2.1.0.jar"/>
 	<taskdef name="jarbundler"
-               classpath="${mac-jarbundler}/${jarbundler.jar}"
-               classname="net.sourceforge.jarbundler.JarBundler" />
+			 classpath="${mac-jarbundler}/${jarbundler.jar}"
+			 classname="net.sourceforge.jarbundler.JarBundler" />
+	<taskdef name="create-plugin"
+			 classpath="${freeplaneant.jar}"
+			 classname="org.freeplane.ant.CreatePlugin"/>
 
 	<target name="makePlugin">
 		<ant antfile="ant/build.xml" target="${anttarget}" dir="${workspace}/${plugindir}" inheritall="false" />
@@ -175,6 +179,8 @@
 		<tar destfile="${dist}/freeplane_srcpure${branch-nick}-${ver}.tar.gz" compression="gzip" longfile="gnu">
 			<tarfileset prefix="freeplane-${ver}" dir="${workspace}" mode="664">
 				<patternset refid="freeplane.sources" />
+				<exclude name="**/*.exe" />
+				<exclude name="**/*.res" />
 				<exclude name="**/*.jar" />
 				<exclude name="**/*JavaApplicationStub*" />
 			</tarfileset>
@@ -347,13 +353,16 @@
 	</target>
 
 	<target name="check-translation">
-		<ant antfile="ant/build.xml" target="check-translation" dir="${workspace}/freeplane" />
+		<ant antfile="ant/build.xml" target="check-translation" dir="${workspace}/freeplane" inheritall="no"/>
 	</target>
 	<target name="format-translation">
-		<ant antfile="ant/build.xml" target="format-translation" dir="${workspace}/freeplane" />
+		<ant antfile="ant/build.xml" target="format-translation" dir="${workspace}/freeplane" inheritall="no"/>
 	</target>
 	<target name="format-translation-force">
 		<ant antfile="ant/build.xml" target="format-translation-force" dir="${workspace}/freeplane" />
+	</target>
+	<target name="create-plugin">
+	  <create-plugin />
 	</target>
 
 	<target name="clean">
