--- a/freeplane_framework/windows-portable/App/AppInfo/appinfo.ini
+++ b/freeplane_framework/windows-portable/App/AppInfo/appinfo.ini
@@ -22,7 +22,7 @@ EULAVersion=1
 
 [Version]
 PackageVersion=1.2.21.1
-DisplayVersion=1.2.21 beta
+DisplayVersion=1.2.21 rc
 
 [SpecialPaths]
 Plugins=NONE
