--- a/freeplane_framework/portableApps/portable.ini
+++ b/freeplane_framework/portableApps/portable.ini
@@ -1,4 +1,5 @@
 # Launch4j runtime config
+-Xmx512m
 -Dportableapp=true
 -Duser.home="%PAL:DataDir%"
 -Dorg.freeplane.userfpdir="%PAL:DataDir%\Freeplane"
