--- a/freeplane_framework/windows-portable/App/AppInfo/appinfo.ini
+++ b/freeplane_framework/windows-portable/App/AppInfo/appinfo.ini
@@ -21,8 +21,8 @@ CommercialUse=true
 EULAVersion=1
 
 [Version]
-PackageVersion=1.2.20.1
-DisplayVersion=1.2.20
+PackageVersion=1.2.21.1
+DisplayVersion=1.2.21 beta
 
 [SpecialPaths]
 Plugins=NONE
