--- a/freeplane_plugin_latex/.classpath
+++ b/freeplane_plugin_latex/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="lib/jlatexmath-1.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/jlatexmath.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
