--- a/freeplane_framework/ant/build.xml
+++ b/freeplane_framework/ant/build.xml
@@ -266,10 +266,13 @@
 
 		<tar destfile="${dist}/freeplane_srcpure-${ver}.tar.gz" compression="gzip" longfile="gnu">
 			<tarfileset prefix="freeplane-${ver}" dir="${workspace}" mode="664">
-				<patternset refid="freeplane.sources" />
+				<patternset refid="freeplane.sources"/>
+				<!-- this file is built from latex.flex using jflex! -->
+				<exclude name="freeplane_plugin_script/src-jsyntaxpane/jsyntaxpane/lexers/LaTeXLexer.java"/>
 				<exclude name="**/*.exe" />
 				<exclude name="**/*.res" />
 				<exclude name="**/*.jar" />
+				<exclude name="**/*.dll" />
 				<exclude name="**/*JavaApplicationStub*" />
 			</tarfileset>
 			<tarfileset prefix="freeplane-${ver}" dir="${root}" mode="664">
@@ -528,6 +531,8 @@
 			  dir="${workspace}/freeplane_plugin_formula"/>
 		<ant antfile="ant/build.xml" target="clean" inheritall="false"
 			  dir="${workspace}/freeplane_plugin_bugreport"/>
+		<ant antfile="ant/build.xml" target="clean" inheritall="false"
+			  dir="${workspace}/freeplane_plugin_openmaps"/>
 	</target>
 
 </project>
