--- a/freeplane_plugin_latex/ant/ant.properties
+++ b/freeplane_plugin_latex/ant/ant.properties
@@ -1,3 +1,2 @@
 plugin.ext.lib = lib
-#jlatexmath.jar = ${plugin.ext.lib}/jlatexmath-0.9.7.jar
-jlatexmath.jar = ${plugin.ext.lib}/jlatexmath-1.0.1.jar
+jlatexmath.jar = ${plugin.ext.lib}/jlatexmath.jar
