--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,26 @@
 freeplane/resources/translations/*.properties -text
 freeplane/viewer-resources/translations/*.properties -text
 JOrtho_0.4_freeplane/src/com/inet/jortho/i18n/*.properties -text
+*.properties eol=lf
 *.sh eol=lf
 *.bat eol=crlf
+
+*.png  -text
+*.gif  -text
+*.jpeg -text
+*.jpg  -text
+*.JPG  -text
+*.ico  -text
+*.bmp  -text
+*.icns -text
+
+*.ortho -text
+*.swf   -text
+*.ttf -text
+
+*.jar -text
+
+*.exe -text
+*.dll -text
+freeplane_framework/mac-jarbundler/FreeplaneJavaApplicationStub -text
 
