--- a/freeplane_plugin_formula/ant/build.xml
+++ b/freeplane_plugin_formula/ant/build.xml
@@ -3,6 +3,7 @@
 	<property name="src" value="src" />
 	<property name="root" value="."/>
 	<property name="osgimanifest" value="${root}/META-INF/MANIFEST.MF" />	
+	<property name="xslt.base" value="${workspace}/freeplane/ant" />
 	<property file="${workspace}/freeplane_framework/ant/ant.properties" />
 	<property file="${workspace}/freeplane/ant/ant.properties" />
 	<property file="ant/ant.properties" />
@@ -11,17 +12,24 @@
 	<property name="dist" value="${root}/dist" />
 	<property name="dist.osgi.dir" value="${dist}/org.freeplane.plugin.formula" />
 	<property name="freeplaneplugin.jar" value="${dist}/org.freeplane.plugin.formula.jar"/>
+	<property name="src.pluginclass" value="${src}/org/freeplane/plugin/formula/"/>
 	<property name="debug" value="on" />
 	<property name="java_source_version" value="1.5" />
 	<property name="java_target_version" value="1.5" />
 	<property name="build.compiler" value="modern" />
 	<property name="classpath" value="${framework.jar}:${freeplane.jars}:${external.jars}:${freeplanescript.jar}"/>
 
-	<target name="build">
+	<target name="build" depends="build-ui-xml">
 		<mkdir dir="${build}" />
 		<javac srcdir="${src}" destdir="${build}" classpath="${classpath}" debug="${debug}" 
 			source="${java_source_version}" target="${java_target_version}" encoding="utf8">
 		</javac>
+	</target>
+
+	<target name="build-ui-xml">
+		<xslt in="${src.pluginclass}/preferences.mm"
+		      style="${xslt.base}/mm2preferences.xsl"
+		      out="${src.pluginclass}/preferences.xml"/>
 	</target>
 
 
@@ -31,6 +39,7 @@
 			<fileset dir="${src}">
 				<include name="**/*.xml"/>
 				<include name="**/*.properties"/>
+				<exclude name="**/preferences.mm" />
 			</fileset>
 		</jar>
 		<delete dir="${dist.osgi.dir}" quiet="true"/>
@@ -59,6 +68,7 @@
 		<delete>
 			<fileset defaultexcludes="no" dir="${src}" includes="**/*~"/>
 		</delete>
+		<delete file="${src.pluginclass}/preferences.xml" quiet="true"/>
 	</target>
 	
 </project>
