--- a/freeplane_plugin_script/ant/build.xml
+++ b/freeplane_plugin_script/ant/build.xml
@@ -1,13 +1,16 @@
 <project name="freeplane_script" default="dist" basedir="..">
 	<property name="workspace" location=".." />
+	<property name="src" value="src" />
 	<property name="root" value="." />
 	<property name="osgimanifest" value="${root}/META-INF/MANIFEST.MF" />
+	<property name="xslt.base" value="${workspace}/freeplane/ant" />
 	<property file="${workspace}/freeplane_framework/ant/ant.properties" />
 	<property file="${workspace}/freeplane/ant/ant.properties" />
 	<property file="ant/ant.properties" />
 	<property name="external.jars" value="${commons-lang.jar}:${commons-io.jar}:${forms.jar}:${SimplyHTML.jar}:${groovy.jar}" />
 	<property name="dist.osgi.dir" value="dist/org.freeplane.plugin.script" />
 	<property name="freeplaneplugin.jar" value="dist/org.freeplane.plugin.script.jar" />
+	<property name="src.pluginclass" value="${src}/org/freeplane/plugin/script/"/>
 	<property name="debug" value="on" />
 	<property name="java_source_version" value="1.5" />
 	<property name="java_target_version" value="1.5" />
@@ -15,13 +18,19 @@
 	<property name="classpath" value="${framework.jar}:${freeplane.jars}:${external.jars}:${jsyntaxpane.jar}" />
 	<property name="apidocdir" value="dist/doc/api" />
 
-	<target name="build">
+	<target name="build" depends="build-ui-xml">
 		<mkdir dir="build" />
 		<javac srcdir="src" destdir="build" classpath="${classpath}" debug="${debug}" source="${java_source_version}" target="${java_target_version}" encoding="utf8">
 			<exclude name="**/*Test.*" />
 		</javac>
 		<javac srcdir="src-jsyntaxpane" destdir="build" classpath="${classpath}" debug="${debug}" source="${java_source_version}" target="${java_target_version}" encoding="utf8">
 		</javac>
+	</target>
+
+	<target name="build-ui-xml">
+		<xslt in="${src.pluginclass}/preferences.mm"
+		      style="${xslt.base}/mm2preferences.xsl"
+		      out="${src.pluginclass}/preferences.xml"/>
 	</target>
 
 	<target name="dist" depends="build">
@@ -31,6 +40,7 @@
 			<fileset dir="src">
 				<include name="**/*.xml" />
 				<include name="**/*.properties" />
+				<exclude name="**/preferences.mm" />
 			</fileset>
 		</jar>
 		<delete dir="${dist.osgi.dir}" quiet="true" />
@@ -100,6 +110,7 @@
 			<fileset defaultexcludes="no" dir="src" includes="**/*~" />
 		</delete>
 		<delete file="lib/jsyntaxpane/nodehighlighter.jar" quiet="true"/>
+		<delete file="${src.pluginclass}/preferences.xml" quiet="true"/>
 	</target>
 
 </project>
