--- a/freeplane_framework/ant/build.xml
+++ b/freeplane_framework/ant/build.xml
@@ -30,6 +30,8 @@
 	<property name="build.doc" value="${build}/doc" />
 	<property name="build.scripts" value="${build}/scripts" />
 	<property name="script" value="${root}/script" />
+	
+	<property name="skip_workspace" value="true" />
 
 	<!-- Mac OS X -->
 	<condition property="isMacOs">
@@ -266,6 +268,17 @@
 					<exclude name="freeplane_framework/windows-icons/Objects/**" />
 					<exclude name="freeplane_framework/windows-icons/*.layout" />
 					<exclude name="freeplane_framework/windows-icons/Makefile.win" />
+
+				        <!-- these are generated using mm2menu.xsl/mm2preferences.xsl! -->
+				        <exclude name="freeplane/resources/xml/browsemodemenu.xml"/>
+				        <exclude name="freeplane/resources/xml/filemodemenu.xml"/>
+				        <exclude name="freeplane/resources/xml/mindmapmodemenu.xml"/>
+				        <exclude name="freeplane/resources/xml/preferences.xml"/>
+				        <exclude name="freeplane/resources/xml/stylemodemenu.xml"/>
+				        <exclude name="freeplane/viewer-resources/xml/appletMenu.xml"/>
+				        <exclude name="freeplane_plugin_formula/src/org/freeplane/plugin/formula/preferences.xml"/>
+				        <exclude name="freeplane_plugin_script/src/org/freeplane/plugin/script/preferences.xml"/>
+			        	<exclude name="freeplane_plugin_latex/src/org/freeplane/plugin/latex/preferences.xml"/>
 				</patternset>
 			</tarfileset>
 			<tarfileset prefix="freeplane-${ver}" dir="${root}" mode="664">
