--- a/freeplane/ant/build.xml
+++ b/freeplane/ant/build.xml
@@ -10,6 +10,7 @@
 	<property name="osgimanifest" value="${root}/META-INF/MANIFEST.MF" />
 	<property file="${workspace}/freeplane_framework/ant/ant.properties" />
 	<property file="${workspace}/freeplane/ant/ant.properties" />
+	<property file="${workspace}/freeplane/ant/signjar.properties" />
 	<property file="ant/ant.properties" />
 	<property name="freeplaneant.jar" value="${workspace}/freeplane_ant/dist/freeplaneant.jar" />
 	<property name="google.translator.jar" value="${workspace}/freeplane_framework/ant/lib/google-api-translate-java-0.92.jar" />
@@ -93,6 +94,11 @@
 	<target name="jar" depends="build">
 		<mkdir dir="${freeplane.dist.lib}" />
 		<jar jarfile="${freeplaneviewer.jar}">
+			<manifest>
+				<attribute name="Permissions" value="all-permissions"/>
+				<attribute name="Codebase" value="*"/>
+				<attribute name="Application-Name" value="Freeplane Viewer Applet"/>
+			</manifest>
 			<fileset dir="${build}">
 				<exclude name="**/*.jar" />
 				<exclude name="**/application/**" />
@@ -119,6 +125,16 @@
 		</jar>
 	</target>
 	
+	<target name="signjar" depends ="jar" if = "signjar.alias">
+		<signjar jar="${freeplaneviewer.jar}" alias="${signjar.alias}" storepass="${signjar.storepass}" keypass="${signjar.keypass}"/>
+	</target>
+	
+	<target name="signjarinfo" depends ="jar" unless = "signjar.alias">
+		<echo>No ${workspace}/freeplane/ant/signjar.properties found</echo>
+		<echo>Applet not signed</echo>
+		<echo>See ${workspace}/freeplane/ant/signjar-example.properties for more info</echo>
+	</target>
+	
 	<target name="buildmac" if="isMacOs">
 		<ant antfile="ant/build.xml" target="dist" dir="${workspace}/freeplane_mac" inheritall="false" />
 	</target>	
@@ -131,7 +147,7 @@
 		</jar>
 	</target>
 	
-	<target name="dist" depends="jar, buildmac">
+	<target name="dist" depends="jar, signjar, signjarinfo, buildmac">
 		<!-- third party libs -->
 		<mkdir dir="${freeplane.dist.lib}" />
 		<copy todir="${freeplane.dist.lib}">
