--- a/freeplane/viewer-resources/freeplane.properties
+++ b/freeplane/viewer-resources/freeplane.properties
@@ -645,6 +645,8 @@ compare_as_number=true
 approximate_search_threshold = 0.65
 
 latex_macros=
+latex_editor_font=Monospaced
+latex_editor_font_size=12
 
 format_locale=automatic
 
