--- a/freeplane_framework/ant/build.xml
+++ b/freeplane_framework/ant/build.xml
@@ -308,11 +308,18 @@
         <include name="${readme_src}" />
       </tarfileset>
     </tar>
-    <!-- build the srcpure tar file with the normalized files -->
+    <!-- build the srcpure tar file with the normalized files 
+         (this is used for linux packages)
+    -->
     <tar destfile="${dist}/freeplane_srcpure-${ver}.tar.gz" compression="gzip" longfile="gnu">
       <tarfileset prefix="freeplane-${ver}" dir="${src.temp.dir}" mode="664">
         <!-- this file is built from latex.flex using jflex! -->
         <exclude name="freeplane_plugin_script/src-jsyntaxpane/jsyntaxpane/lexers/LaTeXLexer.java"/>
+        <!-- these license files are in separate packages! -->
+        <exclude name="freeplane_plugin_openmaps/lib/Gpl.txt"/>
+        <exclude name="freeplane_plugin_latex/lib/COPYING"/>
+        <exclude name="freeplane_plugin_latex/lib/LICENSE"/>
+        <!-- windows stuff -->
         <exclude name="**/*.exe" />
         <exclude name="**/*.res" />
         <exclude name="**/*.jar" />
