--- a/freeplane_plugin_script/src/org/freeplane/plugin/script/defaults.properties
+++ b/freeplane_plugin_script/src/org/freeplane/plugin/script/defaults.properties
@@ -5,5 +5,5 @@ execute_scripts_without_network_restriction = false
 execute_scripts_without_exec_restriction = false
 signed_script_are_trusted = true
 script_user_key_name_for_signing =
-script_directories = scripts
+script_directories =
 script_classpath = 
