--- a/freeplane/viewer-resources/freeplane.properties
+++ b/freeplane/viewer-resources/freeplane.properties
@@ -647,6 +647,7 @@ approximate_search_threshold = 0.65
 latex_macros=
 latex_editor_font=Monospaced
 latex_editor_font_size=12
+latex_disable_editor=false
 
 groovy_editor_font=Monospaced
 groovy_editor_font_size=12
