--- a/freeplane/viewer-resources/freeplane.properties
+++ b/freeplane/viewer-resources/freeplane.properties
@@ -704,3 +704,4 @@ lock_expiration_time_in_minutes = 5
 org.freeplane.plugin.bugreport=org.freeplane.plugin.bugreport.ask
 #org.freeplane.plugin.bugreport=org.freeplane.plugin.bugreport.denied
 exported_image_resolution_dpi = 300
+slow_scroll_selected_node=true
