--- a/freeplane_framework/windows-portable/App/AppInfo/appinfo.ini
+++ b/freeplane_framework/windows-portable/App/AppInfo/appinfo.ini
@@ -22,7 +22,7 @@ EULAVersion=1
 
 [Version]
 PackageVersion=1.3.8.1
-DisplayVersion=1.3.8 beta
+DisplayVersion=1.3.8 rc
 
 [SpecialPaths]
 Plugins=NONE
