--- a/freeplane_framework/windows-portable/App/AppInfo/appinfo.ini
+++ b/freeplane_framework/windows-portable/App/AppInfo/appinfo.ini
@@ -21,8 +21,8 @@ CommercialUse=true
 EULAVersion=1
 
 [Version]
-PackageVersion=1.3.10.1
-DisplayVersion=1.3.10 rc
+PackageVersion=1.3.11.1
+DisplayVersion=1.3.11
 
 [SpecialPaths]
 Plugins=NONE
