Squashed release-1.3.12-pre02
commit 8a019f3c49631ed122e9e2028bbae5c302d80d13
Author: Felix Natter <fnatter@gmx.net>
Date:   Sat Jul 26 11:48:26 2014 +0200

    JSyntaxPane: Fix a javascript problem with java8 (error popup when starting the formula editor)

commit c948ff48f42f841f52e759d04bcb769e34785c73
Author: dpolivaev <dpolivaev>
Date:   Tue Jul 22 20:42:01 2014 +0200

    universalJavaApplicationStub update

commit 7172a7029e5229ffbdbeacd313e19dd79a5d9696
Author: Felix Natter <fnatter@gmx.net>
Date:   Thu Jul 17 20:37:28 2014 +0200

    ant format-translation after weblate pull

commit 6e6f71f16d3becc284bae98cfadb670989aa2c3c
Merge: 3db923f 14e124b
Author: Weblate <noreply@weblate.org>
Date:   Thu Jul 17 20:25:57 2014 +0200

    Merge remote-tracking branch 'origin/1.3.x' into 1.3.x

commit 3db923f7337cab8cb760469ee3287cc666950fb6
Author: János Néhrer <iiamnot@gmail.com>
Date:   Wed Jul 16 15:15:06 2014 +0200

    Translated using Weblate (Hungarian)

    Currently translated at 98.4% (1782 of 1810 strings)

commit ec28bcfeddf1a59c100afc2575de7a6b73b14efd
Author: jan madsen <jsm@janz.dk>
Date:   Thu Jul 17 19:35:13 2014 +0200

    Translated using Weblate (Danish)

    Currently translated at 100.0% (1810 of 1810 strings)

commit 5124b79e9b2bcd017a321326a2b8c70c1093f90a
Author: josep constanti <jconstanti@ovi.com>
Date:   Thu Jul 17 08:16:21 2014 +0200

    Translated using Weblate (Catalan)

    Currently translated at 31.8% (577 of 1810 strings)

commit 14e124b277ea72562acebd9387c6d700f36c73f2
Author: Felix Natter <fnatter@gmx.net>
Date:   Thu Jul 17 20:24:33 2014 +0200

    add LaTeX beamer export filter, thanks to Igor Garcia Olaizola

commit c00591d31c9ec72de2ea5013fa5a4b37a8403c17
Author: jan madsen <jsm@janz.dk>
Date:   Thu Jul 17 10:14:08 2014 +0200

    Translated using Weblate (Danish)

    Currently translated at 100.0% (1810 of 1810 strings)

commit 96af2c482371346699f59ed3c33cf90717028571
Author: atus42 <kadar.attila@mithrandir.hu>
Date:   Wed Jul 

--- a/freeplane/viewer-resources/freeplane.properties
+++ b/freeplane/viewer-resources/freeplane.properties
@@ -487,9 +487,9 @@ webUpdateLocation=http://freeplane.sourceforge.net/info/history/
 webDownloadLocation=http://sourceforge.net/project/showfiles.php?group_id=211069
 UpdateCheckAction.icon=/images/update.png
 last_update_verson=
-bugTrackerLocation=https://sourceforge.net/apps/mantisbt/freeplane/set_project.php?project_id=1&ref=view_all_bug_page.php
-featureTrackerLocation=https://sourceforge.net/apps/mantisbt/freeplane/set_project.php?project_id=7&ref=view_all_bug_page.php
-helpForumLocation=https://sourceforge.net/apps/phpbb/freeplane/viewforum.php?f=1
+bugTrackerLocation=http://www.freeplane.org/bugs
+featureTrackerLocation=http://www.freeplane.org/requests
+helpForumLocation=http://www.freeplane.org/discussion
 
 toolTipManager.initialDelay = 750
 toolTipManager.dismissDelay = 4000
