--- a/freeplane_framework/ant/build.xml
+++ b/freeplane_framework/ant/build.xml
@@ -468,6 +468,9 @@
             !! TODO: Test restoring the jarfileset inside appbundler
                        Comment out this copy task, and delete it if jarfileset works
     -->
+		<property name="maclauncherfullpath" value="${macappfullpath}/Contents/MacOS"/>
+		<delete file="${maclauncherfullpath}/JavaAppLauncher"/>
+		<copy file="${mac-appbundler}/universalJavaApplicationStub.sh" todir="${maclauncherfullpath}"/>
 		<property name="macjavafullpath" value="${macappfullpath}/Contents/Java"/>
 		<copy todir="${macjavafullpath}">
 			<fileset dir="${build}">
@@ -487,9 +490,9 @@
 	<target name="zip4mac" depends="git_version_info, macosxapp">
 		<zip destfile="${dist}/freeplane_macos_bin-${ver}.zip" compress="true">
 			<zipfileset dir="${build4mac}" prefix="freeplane-${ver}">
-				<exclude name="**/JavaAppLauncher" />
+				<exclude name="**/universalJavaApplicationStub.sh" />
 			</zipfileset>
-			<zipfileset file="${macappfullpath}/Contents/MacOS/JavaAppLauncher" filemode="775"
+			<zipfileset file="${macappfullpath}/Contents/MacOS/universalJavaApplicationStub.sh" filemode="775"
             	prefix="freeplane-${ver}/Freeplane.app/Contents/MacOS"/>
 		</zip>
 	</target>
