Squashed release-1.3.16-pre03
commit aae0c0a766a9624835c0c7faad5a22de8e4d3f14
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Oct 17 13:22:34 2015 +0200

    Fix NewLevelStyleAction/DeleteLevelStyleAction

commit ec1cc0a6d7ad20e78a7f523e699c4ef96c9d0ba2
Author: dpolivaev <dpolivaev>
Date:   Mon Jun 22 11:13:55 2015 +0200

    Fix NPE

commit cddc3348b5f25db7b8f236bc6cdaf578d5512702
Author: dpolivaev <dpolivaev>
Date:   Sat Jun 13 20:18:23 2015 +0200

    Fix NPE

commit 7f5a5f48f7a130611397b64ba1cca2a4e5074998
Author: dpolivaev <dpolivaev>
Date:   Wed Jun 10 22:34:34 2015 +0200

    #2230 Error after resizing attribute column width

commit d796bfc7d202491ea189ee858c870ab8e9761428
Author: dpolivaev <dpolivaev>
Date:   Wed Jun 10 22:13:37 2015 +0200

    Fix #2232 ctrl+f to seach on undocked window is not working

commit 2e79884ecd1b3b0f201667782dcca02cc271dae3
Author: dpolivaev <dpolivaev>
Date:   Tue May 26 22:43:44 2015 +0200

    [bugs:#2228] Pasting HTML Text from Firefox

commit 0a99e1ad09e9dd96867afa2a7a68e3bbf90764cd
Author: dpolivaev <dpolivaev>
Date:   Sun Apr 26 16:30:13 2015 +0200

    Change permission of universalJavaApplicationStub.sh

--- a/freeplane_framework/ant/build.xml
+++ b/freeplane_framework/ant/build.xml
@@ -471,6 +471,7 @@
 		<property name="maclauncherfullpath" value="${macappfullpath}/Contents/MacOS"/>
 		<delete file="${maclauncherfullpath}/JavaAppLauncher"/>
 		<copy file="${mac-appbundler}/universalJavaApplicationStub.sh" todir="${maclauncherfullpath}"/>
+		<chmod file="${maclauncherfullpath}/universalJavaApplicationStub.sh" perm="ugo+rx" />
 		<property name="macjavafullpath" value="${macappfullpath}/Contents/Java"/>
 		<copy todir="${macjavafullpath}">
 			<fileset dir="${build}">
