Squashed release-1.3.16-pre07
commit 6bea668accadfd534dadf924326aafc6e2dc9544
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Oct 23 16:18:26 2015 +0200

    Ignore alt codes 1 to 9 and do not start editing

commit 78723cf9a8151d0301c910183fea7c8c1ca8f580
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Oct 23 15:10:03 2015 +0200

    Fix text editor field position for center- and right-aligned nodes

commit 0e167733e5af0a5960f0eab11d85d7bebaec42e9
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Oct 23 14:44:32 2015 +0200

    Revert "Location controller is also needed for browse mode"

    This reverts commit 38c8b550b851b6ee8cbec18bbb0c8c3339f07214.

commit 91fee55bcd47d28a4ea3a00d93c65311771210b1
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Oct 23 15:25:23 2015 +0200

    Change Quantity.from to allow default units + use length as property
    # Conflicts:
    #	freeplane/resources/xml/preferences.xml
    #	freeplane/src/main/java/org/freeplane/view/swing/map/OutlineLayout.java
    #	freeplane/src/org/freeplane/core/resources/components/QuantityProperty.java
    #	freeplane/src/test/java/org/freeplane/core/util/QuantityShould.java

commit 449ea59a30c5699ab615aa65a70ac75f7ba70818
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Oct 23 13:38:07 2015 +0200

    Location controller is also needed for browse mode

commit 5f1f06bd4af9166fcc48d72a0221c45dfbe5a68d
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Oct 22 22:44:07 2015 +0200

    In full window mode display tabs only on floating windows

commit a8eb309c9f055e1efbf31786149d215c40e90d26
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Thu Oct 22 20:07:48 2015 +0200

    Remove tabs on full screen view

    # Conflicts:
    #	freeplane/src/org/freeplane/main/application/ApplicationViewController.java
    #	freeplane/src/org/freeplane/main/application/MapViewDockingWindows.java

commit 9da3f20bb17206de831c08c85769f2d65bf14fc6
Author: Dimitry Polivaev <dpolivaev

--- a/freeplane/viewer-resources/freeplane.properties
+++ b/freeplane/viewer-resources/freeplane.properties
@@ -565,8 +565,8 @@ leftToolbarVisible.fullscreen=false
 toolbarVisible=true
 toolbarVisible.fullscreen=false
 fbarVisible.fullscreen=false
-outline_vgap=5
-outline_hgap=15
+outline_vgap=3 pt
+outline_hgap=10 pt
 fit_map=USER_DEFINED
 il__enter_confirms_by_default=true
 
@@ -613,7 +613,7 @@ menu_file_import.icon=/images/import.png
 ExportAction.icon=/images/export.png
 CloseAction.icon=/images/close.png
 QuitAction.icon=/images/quit.png
-grid_size=10
+grid_size=6 pt
 dialog_menubarVisible=true
 dialog_scrollbarsVisible=true
 connector_shape=CUBIC_CURVE
