--- a/freeplane/ant/build.xml
+++ b/freeplane/ant/build.xml
@@ -118,6 +118,7 @@
 			<manifest>
 				<attribute name="Permissions" value="all-permissions"/>
 				<attribute name="Codebase" value="*"/>
+				<attribute name="Application-Library-Allowable-Codebase" value="*"/>
 				<attribute name="Application-Name" value="Freeplane Viewer Applet"/>
 			</manifest>
 			<fileset dir="${build}">
@@ -158,6 +159,8 @@
 	
 	<target name="signjar-tsa" depends ="jar" if = "signjar.tsaurl">
 		<signjar jar="${freeplaneviewer.jar}" 
+			keystore="${signjar.keystore}" 
+			storetype="${signjar.storetype}" 
 			alias="${signjar.alias}" 
 			storepass="${signjar.storepass}" keypass="${signjar.keypass}"
 			tsaurl="${signjar.tsaurl}"/>
@@ -165,6 +168,8 @@
 	
 	<target name="signjar-no-tsa" depends ="jar"  if = "signjar.alias" unless="signjar.tsaurl">
 		<signjar jar="${freeplaneviewer.jar}" 
+			keystore="${signjar.keystore}" 
+			storetype="${signjar.storetype}" 
 			alias="${signjar.alias}" 
 			storepass="${signjar.storepass}" keypass="${signjar.keypass}"/>
 	</target>
